--- a/WeatherApp/CityListCell.xib
+++ b/WeatherApp/CityListCell.xib
@@ -18,39 +18,45 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QjT-Gp-hd1">
-                        <rect key="frame" x="55" y="7" width="30" height="30"/>
+                        <rect key="frame" x="60" y="7" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="naw-A3-HdI"/>
                             <constraint firstAttribute="width" constant="30" id="rzO-WO-WU3"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="서울" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ISP-SZ-Trx">
-                        <rect key="frame" x="10" y="10" width="35" height="24"/>
+                        <rect key="frame" x="15" y="10" width="35" height="24"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="26º" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lQ2-8F-fKO">
-                        <rect key="frame" x="202" y="11.5" width="27" height="21"/>
+                        <rect key="frame" x="195" y="11.5" width="35" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="uwr-fU-Flw"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="REM-10-yOk">
-                        <rect key="frame" x="274" y="11.5" width="36" height="21"/>
+                        <rect key="frame" x="270" y="11.5" width="40" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="hKd-or-wfZ"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="humidity" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="PZl-ev-VNu">
-                        <rect key="frame" x="239" y="9" width="30" height="27"/>
+                        <rect key="frame" x="235" y="9" width="30" height="27"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="iZw-dc-YSj"/>
                             <constraint firstAttribute="height" constant="30" id="vFh-vF-3Z0"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="thermometer" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6kV-k9-hNs">
-                        <rect key="frame" x="167" y="7.5" width="30" height="30.5"/>
+                        <rect key="frame" x="160" y="7.5" width="30" height="30.5"/>
                         <color key="tintColor" systemColor="systemRedColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="6f4-th-pbj"/>
@@ -64,12 +70,12 @@
                     <constraint firstItem="lQ2-8F-fKO" firstAttribute="leading" secondItem="6kV-k9-hNs" secondAttribute="trailing" constant="5" id="FNP-xj-DG1"/>
                     <constraint firstItem="PZl-ev-VNu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="MS8-A5-Ob4"/>
                     <constraint firstItem="QjT-Gp-hd1" firstAttribute="leading" secondItem="ISP-SZ-Trx" secondAttribute="trailing" constant="10" id="McT-c8-ILE"/>
-                    <constraint firstItem="ISP-SZ-Trx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Ovq-0J-vgx"/>
+                    <constraint firstItem="ISP-SZ-Trx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Ovq-0J-vgx"/>
                     <constraint firstItem="ISP-SZ-Trx" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Pa9-1Q-sl4"/>
                     <constraint firstItem="lQ2-8F-fKO" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="TKc-nP-WaT"/>
                     <constraint firstAttribute="trailing" secondItem="REM-10-yOk" secondAttribute="trailing" constant="10" id="VkS-mr-GhW"/>
                     <constraint firstItem="REM-10-yOk" firstAttribute="leading" secondItem="PZl-ev-VNu" secondAttribute="trailing" constant="5" id="cc0-Ud-h1t"/>
-                    <constraint firstItem="PZl-ev-VNu" firstAttribute="leading" secondItem="lQ2-8F-fKO" secondAttribute="trailing" constant="10" id="gyQ-PZ-DMm"/>
+                    <constraint firstItem="PZl-ev-VNu" firstAttribute="leading" secondItem="lQ2-8F-fKO" secondAttribute="trailing" constant="5" id="gyQ-PZ-DMm"/>
                     <constraint firstItem="QjT-Gp-hd1" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ols-w6-yvX"/>
                 </constraints>
             </tableViewCellContentView>
