--- a/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                     </view>
                     <connections>
                         <outlet property="cityListTableView" destination="pNX-Zh-yVc" id="cu9-ba-AWw"/>
-                        <segue destination="nYH-j2-mK3" kind="showDetail" identifier="DetailWeatherSegue" id="ygx-HF-ZWo"/>
+                        <segue destination="nYH-j2-mK3" kind="presentation" identifier="DetailWeatherSegue" id="ygx-HF-ZWo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -71,7 +71,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="252" image="sun.max" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="irY-pB-xht">
-                                <rect key="frame" x="258.33333333333331" y="140" width="60" height="60"/>
+                                <rect key="frame" x="250" y="140" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="iLC-WU-4iQ"/>
                                     <constraint firstAttribute="width" constant="60" id="wQl-rr-Xlf"/>
@@ -252,6 +252,7 @@
                         <viewLayoutGuide key="safeArea" id="L3o-QN-ozM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="irY-pB-xht" firstAttribute="leading" secondItem="pTK-e8-B1U" secondAttribute="leading" id="1kj-xx-aJR"/>
                             <constraint firstItem="peI-ZV-a5f" firstAttribute="top" secondItem="vRP-gd-jAv" secondAttribute="bottom" constant="20" id="2bR-G5-Gld"/>
                             <constraint firstItem="L3o-QN-ozM" firstAttribute="bottom" secondItem="peI-ZV-a5f" secondAttribute="bottom" id="9Jm-UN-Z5r"/>
                             <constraint firstItem="F9f-Cu-Thb" firstAttribute="leading" secondItem="L3o-QN-ozM" secondAttribute="leading" constant="40" id="HFr-lU-cqr"/>
@@ -260,7 +261,6 @@
                             <constraint firstItem="pTK-e8-B1U" firstAttribute="centerY" secondItem="Yqs-b6-8Xl" secondAttribute="centerY" id="Kwa-ym-OBz"/>
                             <constraint firstItem="L3o-QN-ozM" firstAttribute="trailing" secondItem="peI-ZV-a5f" secondAttribute="trailing" constant="30" id="N7c-TT-t0g"/>
                             <constraint firstItem="xur-3h-CKB" firstAttribute="centerX" secondItem="L3o-QN-ozM" secondAttribute="centerX" id="NJL-hD-ue4"/>
-                            <constraint firstItem="irY-pB-xht" firstAttribute="leading" secondItem="d4B-PC-0m8" secondAttribute="trailing" constant="50" id="ObN-O0-wKj"/>
                             <constraint firstItem="irY-pB-xht" firstAttribute="top" secondItem="xur-3h-CKB" secondAttribute="bottom" constant="40" id="QLc-n5-abh"/>
                             <constraint firstItem="d4B-PC-0m8" firstAttribute="centerY" secondItem="F9f-Cu-Thb" secondAttribute="centerY" id="QSI-oO-1le"/>
                             <constraint firstItem="irY-pB-xht" firstAttribute="centerY" secondItem="F9f-Cu-Thb" secondAttribute="centerY" id="Qqx-JT-cyX"/>
@@ -272,7 +272,6 @@
                             <constraint firstItem="0xd-ue-fZk" firstAttribute="leading" secondItem="pTK-e8-B1U" secondAttribute="leading" id="gKO-0z-790"/>
                             <constraint firstItem="SrV-9c-xza" firstAttribute="top" secondItem="Yqs-b6-8Xl" secondAttribute="bottom" constant="10" id="hAx-Ci-lNy"/>
                             <constraint firstItem="Yqs-b6-8Xl" firstAttribute="top" secondItem="F9f-Cu-Thb" secondAttribute="bottom" constant="20" id="kZv-5c-h3a"/>
-                            <constraint firstItem="L3o-QN-ozM" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="irY-pB-xht" secondAttribute="trailing" constant="30" id="kt9-yy-OHa"/>
                             <constraint firstItem="xur-3h-CKB" firstAttribute="top" secondItem="L3o-QN-ozM" secondAttribute="top" constant="20" id="nJ3-o0-Ae1"/>
                             <constraint firstItem="vRP-gd-jAv" firstAttribute="top" secondItem="0xd-ue-fZk" secondAttribute="bottom" constant="20" id="nef-hI-bFh"/>
                             <constraint firstItem="peI-ZV-a5f" firstAttribute="leading" secondItem="L3o-QN-ozM" secondAttribute="leading" constant="30" id="ouq-ir-oGe"/>
