--- a/WeatherApp/DailyWeatherCell.xib
+++ b/WeatherApp/DailyWeatherCell.xib
@@ -9,45 +9,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DailyCell" rowHeight="70" id="KGk-i7-Jjw" customClass="DailyWeatherCell" customModule="WeatherApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="442" height="70"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DailyCell" rowHeight="62" id="KGk-i7-Jjw" customClass="DailyWeatherCell" customModule="WeatherApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="881" height="62"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="442" height="70"/>
+                <rect key="frame" x="0.0" y="0.0" width="881" height="62"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오늘" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9PA-f9-tLQ">
-                        <rect key="frame" x="10" y="21.5" width="29.5" height="21"/>
+                        <rect key="frame" x="10" y="20.5" width="29.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.max" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="2x0-tN-Xp3">
-                        <rect key="frame" x="287.5" y="1.5" width="60" height="60.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sun.max" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="2x0-tN-Xp3">
+                        <rect key="frame" x="718.5" y="0.5" width="60" height="60.5"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="dw1-NH-vcH"/>
+                            <constraint firstAttribute="height" constant="60" id="gVd-Uf-NvQ"/>
                             <constraint firstAttribute="width" constant="60" id="zjo-gk-GKz"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30º" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LN2-kw-lKI">
-                        <rect key="frame" x="404.5" y="21.5" width="27.5" height="21"/>
+                        <rect key="frame" x="843.5" y="20.5" width="27.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23º" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGV-a5-n7j">
-                        <rect key="frame" x="367.5" y="21.5" width="27" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23º" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EGV-a5-n7j">
+                        <rect key="frame" x="798.5" y="20.5" width="35" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="e4a-F4-IlL"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="2x0-tN-Xp3" secondAttribute="bottom" constant="2" id="27e-KM-nL8"/>
                     <constraint firstItem="LN2-kw-lKI" firstAttribute="leading" secondItem="EGV-a5-n7j" secondAttribute="trailing" constant="10" id="43e-9z-ddL"/>
+                    <constraint firstItem="2x0-tN-Xp3" firstAttribute="trailing" secondItem="EGV-a5-n7j" secondAttribute="leading" constant="-20" id="BZj-O8-1WF"/>
                     <constraint firstAttribute="trailing" secondItem="LN2-kw-lKI" secondAttribute="trailing" constant="10" id="L3O-YD-I2c"/>
-                    <constraint firstItem="2x0-tN-Xp3" firstAttribute="trailing" secondItem="EGV-a5-n7j" secondAttribute="leading" constant="-20" id="MgK-6L-1Ul"/>
-                    <constraint firstItem="2x0-tN-Xp3" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="OMj-jd-csN"/>
                     <constraint firstItem="9PA-f9-tLQ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ZEL-CE-AcB"/>
                     <constraint firstItem="2x0-tN-Xp3" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="jFf-W8-E40"/>
                     <constraint firstItem="9PA-f9-tLQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="s4Z-xA-g8s"/>
@@ -62,7 +63,7 @@
                 <outlet property="dailyWeatherIcon" destination="2x0-tN-Xp3" id="1O4-uH-ctg"/>
                 <outlet property="dayLabel" destination="9PA-f9-tLQ" id="Hfx-7H-PSW"/>
             </connections>
-            <point key="canvasLocation" x="226.08695652173915" y="107.14285714285714"/>
+            <point key="canvasLocation" x="543" y="97"/>
         </tableViewCell>
     </objects>
     <resources>
